Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-8184

[linearstore] Recovery intermittently produces JERR_EFP_BADEFPDIRNAME error followed by core

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • None
    • C++ Broker
    • None

    Description

      Some users are experiencing difficulty recovering the store, especially when there are a large  number of queues (several thousand). The log files show the following pattern:

      JERR_EFP_BADEFPDIRNAME in which some arbitrary number which is not divisible by 4 is being used as the EFP file size (called EFP directory in the log), followed by a segfault:

      May 4 18:55:00 somehostname qpidd[6240]: 2018-05-04 18:55:00 [Store] warning Linear Store: EmptyFilePool create failed: jexception 0x0d03 EmptyFilePool::fileSizeKbFromDirName() threw JERR_EFP_BADEFPDIRNAME: Bad Empty File Pool directory name (must be 'NNNk', where NNN is a number which is a multiple of 4) (Partition: 1; EFP directory: '9k')
      May 4 18:55:00 somehostname kernel: qpidd[6240]: segfault at 10 ip 00007f4219af8e19 sp 00007ffc227a6350 error 4 in linearstore.so[7f4219ac4000+bd000]

       In the event that the random number is divisible by 4, a randomly sized directory containing no files may appear in the partition EFP.

      Attachments

        Activity

          People

            kpvdr Kim van der Riet
            kpvdr Kim van der Riet
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: