QPID-8184: Recovery intermittently produces JERR_EFP_BADEFPDIRNAME error followed by core: Fix by Pavel Moravec